--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,3 +150,10 @@ body {
     border-radius: 40px;
     padding: 10px;
 }
+
+#active-players-canvas {
+    position: absolute;
+    top: 10px;
+    right: 250px; /* Adjust to avoid overlapping with leaderboard */
+    pointer-events: none;
+}
