--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,6 +121,18 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
+#stats {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 5px 10px;
+    border-radius: 6px;
+    border: 2px solid rgba(0, 0, 0, 0.13);
+}
+
 #leaderboard-canvas {
     position: absolute;
     top: 10px;
